--- a/docs/doxygen.cfg
+++ b/docs/doxygen.cfg
@@ -792,6 +792,8 @@ WARN_LOGFILE           =
 
 INPUT                  = @@SRC_DIR@@/README.md \
                          @@SRC_DIR@@/docs/contributing.md \
+                         @@SRC_DIR@@/docs/platform_guide.md \
+                         @@SRC_DIR@@/docs/library_usage.md \
                          @@SRC_DIR@@/docs/firmware \
                          @@SRC_DIR@@/docs/platform \
                          @@SRC_DIR@@/include \
