--- a/platform/template/Kconfig
+++ b/platform/template/Kconfig
@@ -10,6 +10,7 @@
 config PLATFORM_TEMPLATE
 	bool
 	select IPI_MSWI
+	select IRQCHIP_PLIC
 	select SERIAL_UART8250
 	select TIMER_MTIMER
 	default y
