--- a/lib/utils/serial/Kconfig
+++ b/lib/utils/serial/Kconfig
@@ -9,6 +9,11 @@ config FDT_SERIAL
 
 if FDT_SERIAL
 
+config FDT_SERIAL_CADENCE
+	bool "Cadence UART FDT driver"
+	select SERIAL_CADENCE
+	default n
+
 config FDT_SERIAL_GAISLER
 	bool "Gaisler UART FDT driver"
 	select SERIAL_GAISLER
@@ -45,6 +50,10 @@ config FDT_SERIAL_XILINX_UARTLITE
 	default n
 
 endif
+
+config SERIAL_CADENCE
+	bool "Cadence UART support"
+	default n
 
 config SERIAL_GAISLER
 	bool "Gaisler UART support"
