--- a/platform/generic/Kconfig
+++ b/platform/generic/Kconfig
@@ -32,6 +32,10 @@ config PLATFORM_ANDES_AE350
 	bool "Andes AE350 support"
 	default n
 
+config PLATFORM_RENESAS_RZFIVE
+	bool "Renesas RZ/Five support"
+	default n
+
 config PLATFORM_SIFIVE_FU540
 	bool "SiFive FU540 support"
 	default n
