--- a/platform/generic/Kconfig
+++ b/platform/generic/Kconfig
@@ -36,6 +36,7 @@ config PLATFORM_ANDES_AE350
 config PLATFORM_RENESAS_RZFIVE
 	bool "Renesas RZ/Five support"
 	select ANDES45_PMA
+	select ANDES_SBI
 	default n
 
 config PLATFORM_SIFIVE_FU540
