Add rvcpu config

--- a/lib/utils/serial/Kconfig
+++ b/lib/utils/serial/Kconfig
@@ -54,6 +54,11 @@ config FDT_SERIAL_XILINX_UARTLITE
 	select SERIAL_XILINX_UARTLITE
 	default n
 
+config FDT_SERIAL_RVCPU
+	bool "Rvcpu UART FDT driver"
+	select SERIAL_RVCPU
+	default n
+
 endif
 
 config SERIAL_CADENCE
@@ -90,6 +95,10 @@ config SERIAL_XILINX_UARTLITE
 
 config SERIAL_SEMIHOSTING
 	bool "Semihosting support"
+	default n
+
+config SERIAL_RVCPU
+	bool "Rvcpu UART support"
 	default n
 
 endmenu
